# sndocs.com

./: .gitignore  AGENTS.md  LICENSE  README.md  pipeline.toml  pyproject.toml
.agent/: CONTEXT.md  WORKLOG.md
.agent/worklog/: 2026-H2.md
.github/workflows/: build-site.yml
docs/: ui-remediation.md
docs/adr/: 0001-upstream-llms-source-contract.md  0002-versioned-families-and-archive-retention.md  0003-mkdocs-material-content-processing.md  0004-stale-link-resolution.md  0005-host-agnostic-release-artifacts.md  0006-layered-project-context.md  0007-explicit-stale-link-overrides.md  0008-reproducible-local-source-snapshots.md  0009-canonical-metadata-link-resolution.md  0010-bound-build-workspaces-and-smoke-profile.md  0011-normalize-upstream-validation-defects.md  0012-clean-directory-urls-and-local-preview.md  0013-simplify-and-harden-cli.md  0014-suppress-omitted-navigation-diagnostics.md  0015-local-hybrid-ui-audit.md  0016-versioned-site-quality-ruleset.md  0017-remediate-ui-findings-at-source.md  0018-normalize-malformed-upstream-presentation.md  README.md
src/sndocs/: __init__.py  artifacts.py  builder.py  cli.py  config.py  discovery.py  links.py  metadata.py  models.py  navigation.py  quality.py  source.py  transform.py  ui_audit.py
src/sndocs/quality_rules/: README.md  (+2 more)
tests/: test_artifacts.py  test_build_plan.py  test_build_reporting.py  test_cli_v2.py  test_cli_workspace.py  test_discovery.py  test_incremental.py  test_links.py  test_mkdocs_build.py  test_navigation.py  test_quality.py  test_source.py  test_transform.py  test_ui_audit.py
(+15 files in other folders)
