[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sndocs-pipeline"
version = "0.2.0"
description = "Build a versioned MkDocs mirror of ServiceNowDocs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "Markdown>=3.10,<4",
  "mkdocs-material>=9.6,<10",
  "mkdocs-minify-html-plugin>=0.3.11,<0.4",
  "PyYAML>=6.0,<7",
  "typing-extensions>=4.12,<5; python_version < '3.12'",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9"]
ui = ["playwright>=1.55,<2"]

[project.scripts]
sndocs = "sndocs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sndocs"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
